--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>My ECS Github Page</title>
+<title>Matteo Gristina's Website</title>
 <body>
 
-<h1>My ECS Github Web Page</h1>
-<p>I love ECS!</p>
+<h1>My Web Page</h1>
+<p>yay</p>
 
 </body>
 </html>
