--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ The Congress shall have power to enforce this article by appropriate legislation
 AMENDMENT XXVII
 Share
 No law varying the compensation for the services of the Senators and Representatives shall take effect, until an election of Representatives shall have intervened.
-About Constitute      Acknowledgements      Privacy Policy      Terms & Conditions</p>
+About Constitute      Acknowledgements      Privacy Policy      Terms and Conditions</p>
 
 </body>
 </html>
