--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   
 <a href="http://www.script-o-rama.com/movie_scripts/a1/bee-movie-script-transcript-seinfeld.html">This is a link</a>
   
-<p>ConstituteHOME
-United States of America 1789 (rev. 1992)
-
-PREAMBLE<br>
+<p>PREAMBLE<br>
 Share
 We the People of the United States, in Order to form a more perfect Union, establish Justice, insure domestic Tranquility, provide for the common defense, promote the general Welfare, and secure the Blessings of Liberty to ourselves and our Posterity, do ordain and establish this Constitution for the United States of America.
 ARTICLE I
