--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <h1>My Web Page</h1>
 <h2>TESTING</h2>
-  
+ 
+<!--comment-->
 <a href="http://www.script-o-rama.com/movie_scripts/a1/bee-movie-script-transcript-seinfeld.html">This is a link</a>
   
 <p>PREAMBLE<br>
