--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 <h1>The Bee Movie</h1>
 <h2>A Living Meme</h2>
-<h3>A Living Meme</h3>
+
  
 <!--asdf-->
-<a href="http://www.script-o-rama.com/movie_scripts/a1/bee-movie-script-transcript-seinfeld.html">This is a link</a>
+<a href="http://www.script-o-rama.com/movie_scripts/a1/bee-movie-script-transcript-seinfeld.html">Link to The Bee Movie Script</a>
   
 <p>PREAMBLE<br>
 Share
