--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
  
 <!--asdf-->
 <a href="google.com">Link1</a>
-<a2 href="google.com">Link2</a2>
-<a3  href="google.com">Link3</a3>
+<a href="google.com">Link2</a>
+<a href="google.com">Link3</a>
   
 <p>Stuff</p>
 
