--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="google.com">Link2</a><br>
 <a href="google.com">Link3</a><br>
   
-<p>Stuff</p>
+<p>I think this is supposed to be a paragraph</p>
 
 </body>
 </html>
