--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
  <title>My Website</title>
 <body>
 
-<h1>Test</h1>
-<h2>Test</h2>
+<h1>I think this is a title</h1>
+<h2>I think this is a subtitle</h2>
 
  
 <!--asdf-->
