--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
  
 <!--asdf-->
-<a href="google.com">Link1</a><br>
-<a href="google.com">Link2</a><br>
-<a href="google.com">Link3</a><br>
+<a href="https://www.google.com/">Link1</a><br>
+<a href="https://www.google.com/">Link2</a><br>
+<a href="https://www.google.com/">Link3</a><br>
   
 <p>I think this is supposed to be a paragraph</p>
 
