--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
+<!--Setup-->
 <!DOCTYPE html>
 <html>
+<!--Title--> 
  <title>My Website</title>
 <body>
-
+<!--Title/Subtitles-->
 <h1>I think this is a title</h1>
-<h2>I think this is a subtitle</h2>
+ <h2>I think this is a subtitle</h2>
 
  
-<!--asdf-->
+<!--Links-->
 <a href="https://www.google.com/">Link1</a><br>
-<a href="https://www.google.com/">Link2</a><br>
-<a href="https://www.google.com/">Link3</a><br>
-  
+ <a href="https://www.google.com/">Link2</a><br>
+  <a href="https://www.google.com/">Link3</a><br>
+<!--Paragraph-->
 <p>I think this is supposed to be a paragraph</p>
 
 </body>
