--- a/exercises/links.html
+++ b/exercises/links.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>Exercises Links.html</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>This my link page</h1>
+<p>This my llinks page</p>
 
 </body>
 </html>
