--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>HTML Exercise/index.html</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is my other index.html</h1>
+<p>This is my other index.html</p>
 
 </body>
 </html>
