--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
  
 <!--Links-->
 	<a href="https://www.google.com/">Link1</a><br>
-		<a href="https://matteogristina.github.io/exercises/index.html">Link2</a><br>
-			<a href="https://matteogristina.github.io/exercises/links.html">Link3</a><br>
+		<a href="https://matteogristina.github.io/exercises/index.html">Exercises Index</a><br>
+			<a href="https://matteogristina.github.io/exercises/links.html">Exercises Links</a><br>
 <!--Paragraph-->
 	<p>I think this is supposed to be a paragraph</p>
 
