--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,6 +5,6 @@
 
 <h1>This is my other index.html</h1>
 <p>This is my other index.html</p>
-
+<a href="https://matteogristina.github.io/">Home Page</a>
 </body>
 </html>
