--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<html>
 <!--Title--> 
 	<title>My Website</title>
-		<body style="background-color;powderblue;">
+		<body style="background-color:powderblue;">
 <!--Title/Subtitles-->
 	<h1>I think this is a title</h1>
 			<h2>I think this is a subtitle</h2>
