--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<html>
 <!--Title--> 
 	<title>My Website</title>
-		<body style="background-color:powderblue;">
+		<body style="background-color:red;">
 <!--Title/Subtitles-->
 	<h1>I think this is a title</h1>
 			<h2>I think this is a subtitle</h2>
@@ -14,7 +14,7 @@
 		<a href="https://matteogristina.github.io/exercises/index.html">Exercises Index</a><br>
 			<a href="https://matteogristina.github.io/exercises/links.html">Exercises Links</a><br>
 <!--Paragraph-->
-	<p>I think this is supposed to be a paragraph</p>
+	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
 
 </body>
 </html>
