--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>My Website</title>
 		<body style="background-color:red;">
 <!--Title/Subtitles-->
-	<h1>I think this is a title</h1>
+	<h1 style="background-color:blue;">I think this is a title</h1>
 			<h2>I think this is a subtitle</h2>
 
  
