--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Exercise/index.html</title>
-<body>
+<body style="background-color:gray;">
 
 <h1>This is my other index.html</h1>
 <p>This is my other index.html</p>
