--- a/exercises/links.html
+++ b/exercises/links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Exercises Links.html</title>
-<body>
+<body style="background-color:blue;">
 
 <h1>This my link page</h1>
 <p>This my llinks page</p>
