--- a/exercises/index.html
+++ b/exercises/index.html
@@ -6,5 +6,6 @@
 <h1>This is my other index.html</h1>
 <p>This is my other index.html</p>
 <a href="https://matteogristina.github.io/">Home Page</a>
+ <a href="https://matteogristina.github.io/exercises/links.html">Links Page</a>
 </body>
 </html>
