--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,7 +5,7 @@
 
 <h1>This is my other index.html</h1>
 <p>This is my other index.html</p>
-<a href="https://matteogristina.github.io/">Home Page</a>
- <a href="https://matteogristina.github.io/exercises/links.html">Links Page</a>
+<a href="https://matteogristina.github.io/">Home Page</a><br>
+<a href="https://matteogristina.github.io/exercises/links.html">Links Page</a>
 </body>
 </html>
