--- a/exercises/index.html
+++ b/exercises/index.html
@@ -6,6 +6,7 @@
 <h1>This is my other index.html</h1>
 <p>This is my other index.html</p>
 <a href="https://matteogristina.github.io/">Home Page</a><br>
-<a href="https://matteogristina.github.io/exercises/links.html">Links Page</a>
+<img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613">
+
 </body>
 </html>
