--- a/exercises/links.html
+++ b/exercises/links.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<title>Exercises Links.html</title>
+<title>HTML Exercise/links.html</title>
 <body style="background-color:blue;">
 
-<h1>This my link page</h1>
-<p>This my llinks page</p>
-<a href="https://matteogristina.github.io/">Home Page</a>
+<h1>This is my links.html</h1>
+<p>This is my links.html</p>
+<a href="https://matteogristina.github.io/">
+	<img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="100" height="200"><br>
+
+<img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="200" height="100"><br>
+
 </body>
 </html>
