--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<title>attributes.html</title>
+<body style="background-color:green;">
 
+<h1>This is my other index.html</h1>
+<p>This is my other index.html</p>
+<a href="https://matteogristina.github.io/">Home Page</a><br>
+
+</body>
+</html>
