--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -3,8 +3,8 @@
 <title>attributes.html</title>
 <body style="background-color:green;">
 
-<h1>This is my other index.html</h1>
-<p>This is my other index.html</p>
+<h1>This is my attributes.html</h1>
+<p>This is my attributes.html</p>
 <a href="https://matteogristina.github.io/">Home Page</a><br>
 
 </body>
