--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -3,7 +3,7 @@
 <title>attributes.html</title>
 <body style="background-color:green;">
 
-<h1>This is my attributes.html page</h1>
+<h1style="border: 15px solid yellow;">This is my attributes.html page</h1>
 <p>This is my attributes.html page</p>
 <a href="https://matteogristina.github.io/">Home Page</a><br>
 
