--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <title>attributes.html</title>
-<body style="background-color:green;">
+<body style="background-color:white;">
 
-<h1style="border: 15px solid yellow;">This is my attributes.html page</h1>
-<p>This is my attributes.html page</p>
+<h1 style="border: 15px solid yellow;">This is my attributes.html page</h1>
+<p style="border: 5px solid blue;>This is my attributes.html page</p>
+
+
 <a href="https://matteogristina.github.io/">Home Page</a><br>
 
 </body>
