--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -4,7 +4,7 @@
 <body style="background-color:white;">
 
 <h1 style="border: 15px solid yellow;">This is my attributes.html page</h1>
-<p style="border: 5px solid blue;>This is my attributes.html page</p>
+<p style="border: 5px solid blue;">This is my attributes.html page</p>
 
 
 <a href="https://matteogristina.github.io/">Home Page</a><br>
