--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-<title>attributes.html</title>
+<title>Attributes</title>
 <body style="background-color:white;">
 
-<h1 style="border: 15px solid yellow;">This is my attributes.html page</h1>
-<p style="border: 5px solid blue;">This is my attributes.html page</p>
+<h1 style="border: 15px solid yellow;">This is my HTML Atrributes page</h1>
+<p style="border: 5px solid blue;">All HTML elements have attributes.<br>
+Attributes also provide additional information about an element.<br>
+Attributes are always specified in the start tag.<br>
+Attributes usually come in name/value pairs like: name="value"<br>
+Attributes that I used making my website are "href" and "src". The yellow border is controlled an attribute, so is the blue border. </p>
 
 
 <a href="https://matteogristina.github.io/">Home Page</a><br>
+
 
 </body>
 </html>
