--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -10,7 +10,7 @@
 <h3>This is another sub-heading</h3>
 <h4>This is another sub-heading</h4>
 
-<p>Headings are defined by "h1-6"(in <>) h1 represents the most important heading, while h6 represents the least important heading. THe 4 decenting lines with "heading" in it are all heading lines. </p> 
+<p>Headings are defined by "h1-6"(in angle brackets) h1 represents the most important heading, while h6 represents the least important heading. THe 4 decenting lines with "heading" in it are all heading lines. </p> 
 <h5 style="font-size:80px;">Headings can be larger than default sizes too.</h5>
 <p>Headings can be enlarged by using a style attribute (style="font-size:##px;")</p>
 
