--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<a href="https://matteogristina.github.io/exercises/index.html">Exercises Index</a><br>
 			<a href="https://matteogristina.github.io/exercises/links.html">Exercises Links</a><br>
 				<a href="https://matteogristina.github.io/exercises/attributes.html">Attributes</a><br>
+					<a href="https://matteogristina.github.io/exercises/headings.html">Headings</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
 
