--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -12,7 +12,7 @@ Attributes that I used making my website are "href" and "src". The yellow border
 
 
 <a href="https://matteogristina.github.io/">Home Page</a><br>
-
+<a href="https://matteogristina.github.io/exercises/headings.html">Home Page</a><br>
 
 </body>
 </html>
