--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -13,6 +13,12 @@
 <p>Headings are defined by "h1-6"(in angle brackets) h1 represents the most important heading, while h6 represents the least important heading. THe 4 decenting lines with "heading" in it are all heading lines. </p> 
 <h5 style="font-size:80px;">Headings can be larger than default sizes too.</h5>
 <p>Headings can be enlarged by using a style attribute (style="font-size:##px;")</p>
+  
+  
+  
+  
+ <a href="https://matteogristina.github.io/exercise/attributes">Last exercise</a><br>
+    <a href="https://matteogristina.github.io/exercise/paragraphs">Next exercise</a><br>
 
 </body>
 </html>
