--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -17,8 +17,8 @@
   
   
   
-<a href="https://matteogristina.github.io/exercise/attributes.html">Last exercise</a><br>
-<a href="https://matteogristina.github.io/exercise/paragraphs.html">Next exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/attributes.html">Last exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/paragraphs.html">Next exercise</a><br>
 
 </body>
 </html>
