--- a/exercises/formatting.html
+++ b/exercises/formatting.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p>Formatting text bold italics and can make text sub and superscript
+<p>Formatting text bold italics and can make text sub and superscript<br> <b> - Bold text
+<strong> - Important text
+<i> - Italic text
+<em> - Emphasized text
+<mark> - Marked text
+<small> - Small text
+<del> - Deleted text
+<ins> - Inserted text
+<sub> - Subscript text
+<sup> - Superscript text
+<p>
 <p><b>This text is bold</b></p>
 <p><i>This text is italic</i></p>
 <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
