--- a/exercises/comments.html
+++ b/exercises/comments.html
@@ -3,7 +3,7 @@
 <body>
 
 <p>To create a comment use this angle bracket (<), followed by an exclamation point, and 2 dashes. To finish the comment, use 2 dashes and this angle bracket(>)</p>
-<p>This is a paragraph.</p>
+<p>This is a paragraph. There are three comments below this text, but the do not show up on the website.</p>
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
