--- a/exercises/colors.html
+++ b/exercises/colors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<p>In HTML, there are a few pre-set colors that you can use, they are listed below. To use a color, you use a style attribute and for a backgroung color, use this "background-color:" the color follows the ":" and the statement ends with a semicolor and closing quotation mark 
 <h1 style="background-color:Tomato;">Tomato</h1>
 <h1 style="background-color:Orange;">Orange</h1>
 <h1 style="background-color:DodgerBlue;">DodgerBlue</h1>
