--- a/exercises/style.html
+++ b/exercises/style.html
@@ -7,6 +7,7 @@
 <p style="color:red;">I am red</p>
 <p style="color:blue;">I am blue</p>
 <p style="font-size:36px;">I am big</p>
-
+<a href="matteogristina.github.io/exercises/paragraphs.html">Previous Exercise</a>
+<a href="matteogristina.github.io/exercises/formatting.html">Next Exercise</a>
 </body>
 </html>
