--- a/exercises/colors.html
+++ b/exercises/colors.html
@@ -10,6 +10,8 @@
 <h1 style="background-color:SlateBlue;">SlateBlue</h1>
 <h1 style="background-color:Violet;">Violet</h1>
 <h1 style="background-color:LightGray;">LightGray</h1>
+ <a href="matteogristina.github.io/exercises/comments.html">Previous Exercise</a>
+<a href="matteogristina.github.io/exercises/index.html">Exercises Home Page</a>
 
 </body>
 </html>
