--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -7,7 +7,7 @@
 
 <h1>Paragraphs are controlled by the element "p" (in angle brackets of course)</h1>
 <p>This is a paragraph.</p><p>This is also a paragraph.</p><p>This is a paragraph too.</p><p>This is another paragraph.</p><p>This is a paragraph.</p>
-<a href="matteogristina.github.io/exercises/headings.html">Previous Exercise</a>
-<a href="matteogristina.github.io/exercises/style.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/headings.html">Previous Exercise</a>
+<a href="https://matteogristina.github.io/exercises/style.html">Next Exercise</a>
 </body>
 </html>
