--- a/exercises/formatting.html
+++ b/exercises/formatting.html
@@ -15,7 +15,7 @@
 <p><b>This text is bold</b></p>
 <p><i>This text is italic</i></p>
 <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
-<a href="matteogristina.github.io/exercises/style.html">Previous Exercise</a>
-<a href="matteogristina.github.io/exercises/quotation.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/style.html">Previous Exercise</a>
+<a href="https://matteogristina.github.io/exercises/quotation.html">Next Exercise</a>
 </body>
 </html>
