--- a/exercises/quotation.html
+++ b/exercises/quotation.html
@@ -12,7 +12,7 @@ Example.com<br>
 Box 564, Disneyland<br>
 USA
 </address>
-<a href="matteogristina.github.io/exercises/formatting.html">Previous Exercise</a>
-<a href="matteogristina.github.io/exercises/comments.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/formatting.html">Previous Exercise</a>
+<a href="https://matteogristina.github.io/exercises/comments.html">Next Exercise</a>
 </body>
 </html>
