--- a/exercises/comments.html
+++ b/exercises/comments.html
@@ -7,7 +7,7 @@
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
-<a href="matteogristina.github.io/exercises/quoation.html">Previous Exercise</a>
-<a href="matteogristina.github.io/exercises/colors.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/quoation.html">Previous Exercise</a>
+<a href="https://matteogristina.github.io/exercises/colors.html">Next Exercise</a>
 </body>
 </html>
