--- a/exercises/index.html
+++ b/exercises/index.html
@@ -6,8 +6,8 @@
 <h1>This is my other index.html</h1>
 <p>This is my other index.html</p>
 <a href="https://matteogristina.github.io/">Home Page</a><br>
+<img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613"><br>
 <a href="https://matteogristina.github.io/exercises/attributes.html">Exercises</a><br>
-<img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613">
 
 </body>
 </html>
