--- a/exercises/index.html
+++ b/exercises/index.html
@@ -7,6 +7,7 @@
 <p>This is my other index.html</p>
 <a href="https://matteogristina.github.io/">Home Page</a><br>
 <img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613"><br>
+<p>To go to the next exercises, links will be at the bottom of the page(s)</p>
 <a href="https://matteogristina.github.io/exercises/attributes.html">Exercises</a><br>
 
 </body>
