--- a/exercises/index.html
+++ b/exercises/index.html
@@ -3,12 +3,12 @@
 <title>HTML Exercise/index.html</title>
 <body style="background-color:gray;">
 
-<h1>This is my other index.html</h1>
-<p>This is my other index.html</p>
+<h1>This is my Exercises index.html</h1>
+<p>This is my Exercises index.html</p>
 <a href="https://matteogristina.github.io/">Home Page</a><br>
 <img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613"><br>
 <p>To go to the next exercises, links will be at the bottom of the page(s)</p>
-<a href="https://matteogristina.github.io/exercises/attributes.html">Exercises</a><br>
+<a href="https://matteogristina.github.io/exercises/attributes.html">Click to view the Exercises</a><br>
 
 </body>
 </html>
