--- a/exercises/indextwo.html
+++ b/exercises/indextwo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Exercises List</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is the list of all the exercises</h1>
+<p>These are the exersises.</p>
 
 </body>
 </html>
