--- a/exercises/indextwo.html
+++ b/exercises/indextwo.html
@@ -6,7 +6,16 @@
 <body>
 
 <h1>This is the list of all the exercises</h1>
-<p>These are the exersises.</p>
+<p>These are the exersises.<br>
+<a href="https://matteogristina.github.io/exercises/attributes.html">Attributes</a><br>
+<a href="https://matteogristina.github.io/exercises/headings.html">Headings</a><br>
+<a href="https://matteogristina.github.io/exercises/paragraphs.html">Paragraphs</a><br>
+<a href="https://matteogristina.github.io/exercises/style.html">Styles</a><br>
+<a href="https://matteogristina.github.io/exercises/formatting.html">Formatting</a><br>
+<a href="https://matteogristina.github.io/exercises/quotation.html">Quotations/a><br>
+<a href="https://matteogristina.github.io/exercises/comments.html">Comments</a><br>
+<a href="https://matteogristina.github.io/exercises/colors.html">Colors</a><br>
+</p>
 
 </body>
 </html>
