--- a/exercises/indextwo.html
+++ b/exercises/indextwo.html
@@ -12,7 +12,7 @@
 <a href="https://matteogristina.github.io/exercises/paragraphs.html">Paragraphs</a><br>
 <a href="https://matteogristina.github.io/exercises/style.html">Styles</a><br>
 <a href="https://matteogristina.github.io/exercises/formatting.html">Formatting</a><br>
-<a href="https://matteogristina.github.io/exercises/quotation.html">Quotations/a><br>
+<a href="https://matteogristina.github.io/exercises/quotation.html">Quotations</a><br>
 <a href="https://matteogristina.github.io/exercises/comments.html">Comments</a><br>
 <a href="https://matteogristina.github.io/exercises/colors.html">Colors</a><br>
 </p>
