--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -13,6 +13,7 @@ Attributes that I used making my website are "href" and "src". The yellow border
 
 <a href="https://matteogristina.github.io/">Home Page</a><br>
 <a href="https://matteogristina.github.io/exercises/headings.html">Next exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 
 </body>
 </html>
