--- a/exercises/formatting.html
+++ b/exercises/formatting.html
@@ -17,5 +17,6 @@
 <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
 <a href="https://matteogristina.github.io/exercises/style.html">Previous Exercise</a>
 <a href="https://matteogristina.github.io/exercises/quotation.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
