--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -19,6 +19,7 @@
   
 <a href="https://matteogristina.github.io/exercises/attributes.html">Last exercise</a><br>
 <a href="https://matteogristina.github.io/exercises/paragraphs.html">Next exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 
 </body>
 </html>
