--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -9,5 +9,6 @@
 <p>This is a paragraph.</p><p>This is also a paragraph.</p><p>This is a paragraph too.</p><p>This is another paragraph.</p><p>This is a paragraph.</p>
 <a href="https://matteogristina.github.io/exercises/headings.html">Previous Exercise</a>
 <a href="https://matteogristina.github.io/exercises/style.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
