--- a/exercises/quotation.html
+++ b/exercises/quotation.html
@@ -14,5 +14,6 @@ USA
 </address>
 <a href="https://matteogristina.github.io/exercises/formatting.html">Previous Exercise</a>
 <a href="https://matteogristina.github.io/exercises/comments.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
