--- a/exercises/style.html
+++ b/exercises/style.html
@@ -4,10 +4,11 @@
 
 <p>Styles change the size, color and font of the text.</p>
 <p>I am normal</p>
-<p style="color:red;">I am red</p>
-<p style="color:blue;">I am blue</p>
-<p style="font-size:36px;">I am big</p>
+<p style="color:red;">RED TEXT</p>
+<p style="color:blue;">BLUE TEXT</p>
+<p style="font-size:36px;">LARGE TEXT</p>
 <a href="https://matteogristina.github.io/exercises/paragraphs.html">Previous Exercise</a>
 <a href="https://matteogristina.github.io/exercises/formatting.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
