--- a/exercises/index.html
+++ b/exercises/index.html
@@ -9,6 +9,7 @@
 <img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613"><br>
 <p>To go to the next exercises, links will be at the bottom of the page(s)</p>
 <a href="https://matteogristina.github.io/exercises/attributes.html">Click to view the Exercises</a><br>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Click to view List</a><br>
 
 </body>
 </html>
