--- a/exercises/indextwo.html
+++ b/exercises/indextwo.html
@@ -15,6 +15,7 @@
 <a href="https://matteogristina.github.io/exercises/quotation.html">Quotations</a><br>
 <a href="https://matteogristina.github.io/exercises/comments.html">Comments</a><br>
 <a href="https://matteogristina.github.io/exercises/colors.html">Colors</a><br>
+<a href="https://matteogristina.github.io/exercises/index.html">Back To Index</a><br>
 </p>
 
 </body>
