--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <!--Links-->
 	<a href="https://www.google.com/">Link1</a><br>
 		<a href="https://matteogristina.github.io/exercises/index.html">Exercises Index</a><br>
-			<a href="https://matteogristina.github.io/exercises/links.html">Exercises Links</a><br>
-				<a href="https://matteogristina.github.io/exercises/attributes.html">Attributes</a><br>
-					<a href="https://matteogristina.github.io/exercises/headings.html">Headings</a><br>
+			<a href="https://matteogristina.github.io/exercises/index.html">Exercises</a><br>
+				<a href="https://matteogristina.github.io/exercises/indextwo.html">Exercises Links</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
 
