--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
  
 <!--Links-->
-	<a href="https://matteogristina.github.io/exercises/index.html">Exercises Index</a><br>
-		<a href="https://matteogristina.github.io/exercises/index.html">Exercises</a><br>
-			<a href="https://matteogristina.github.io/exercises/indextwo.html">Exercises Links</a><br>
+	<a href="https://matteogristina.github.io/exercises/index.html">Exercises Home Page</a><br>
+		<a href="https://matteogristina.github.io/exercises/indextwo.html">Exercises Links</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
 
