--- a/exercises/links.html
+++ b/exercises/links.html
@@ -2,11 +2,35 @@
 <html>
 <title>HTML Exercise/links.html</title>
 <body style="background-color:blue;">
+<style>
+a:link 
+{
+color: red;
+background-color: transparent;		<!--Default Color-->
+text-decoration: none;
+}
+a:visited {
+color: yellow;
+background-color: transparent;		<!--Color When Visited-->
+text-decoration: none;
+}
+a:hover {
+color: white;
+background-color: transparent;		<!--Color While Hovering-->
+text-decoration: underline;
+}
+a:active {
+color: pink;
+background-color: transparent;		<!--Color While Hovering-->
+text-decoration: underline;
+}
+</style>
 
 <h1>This is my links.html</h1>
 <p>This is my links.html</p>
-<a href="https://matteogristina.github.io/">
-	<img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="100" height="200"><br>
+<a href="https://google.com">Google.com</a><br>
+<a href="https://maps.google.com">Google Maps</a><br>
+<a href="https://matteogristina.github.io/index.html">Home Page</a><br>
 
 <img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="200" height="100"><br>
 
