--- a/exercises/links.html
+++ b/exercises/links.html
@@ -30,7 +30,7 @@ text-decoration: underline;
 <p>This is my links.html</p>
 <a href="https://google.com">Google.com</a><br>
 <a href="https://maps.google.com">Google Maps</a><br>
-<a href="https://matteogristina.github.io/index.html">Home Page</a><br>
+<a href="/index.html">Home Page</a><br>
 
 <img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="200" height="100"><br>
 
