--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 <!--Links-->
 	<a href="https://matteogristina.github.io/exercises/index.html">Exercises Home Page</a><br>
-		<a href="https://matteogristina.github.io/exercises/indextwo.html">Exercises Links</a><br>
+		<a href="https://matteogristina.github.io/exercises/indextwo.html">List of Exercises</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
 
