--- a/exercises/indextwo.html
+++ b/exercises/indextwo.html
@@ -25,6 +25,8 @@
 <li><a href="https://matteogristina.github.io/exercises/comments.html">Comments</a><br></li>
 
 <li><a href="https://matteogristina.github.io/exercises/colors.html">Colors</a><br></li>
+    
+<li><a href="https://matteogristina.github.io/exercises/links.html">Links</a><br></li>
 
 <li><a href="https://matteogristina.github.io/exercises/index.html">Back To Index</a><br></li>
 
