--- a/exercises/images.html
+++ b/exercises/images.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Images</title>
+</head>
+<body>
+
+<h1>Images</h1>
+<p>Images can be implemented multiple ways. First, you can upload them from your githup repository. Also, you can direectly link the image from the internet.</p>
+
+</body>
+</html>
 
