--- a/exercises/images.html
+++ b/exercises/images.html
@@ -8,6 +8,11 @@
 <h1>Images</h1>
 <p>Images can be implemented multiple ways. First, you can upload them from your githup repository. Also, you can direectly link the image from the internet.</p>
 
+<img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="400" height="50"><br>
+<img src="/images/wave.jpg"
+<img src="/images/road.jpg"
+
+
 </body>
 </html>
 
