--- a/exercises/tables.html
+++ b/exercises/tables.html
@@ -3,6 +3,7 @@
 <body>
 <title>Tables</title>
 <table style="width:20%">
+<p>Tables are useful for organizing information, and making them in HTML is fairly simple, as you can see below</p>
   <tr>
     <th>Table</th>
     <th>Heading</th> 
