--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<p>Lists are also important elements and are also customizable</p>
+
+<h2>Unordered List with Circle Bullets</h2>
+
+<ul style="list-style-type:circle">
+  <li>Frist</li>
+  <li>Second</li>
+  <li>Third</li>
+</ul>  
+
+<h3>Unordered List with squares</h3>
+<ul style="list-style-type:square">
+  <li>Frist</li>
+  <li>Second</li>
+  <li>Third</li>
+</ul>
+
+<h3>Ordered List with uppercase letters</h3>
+<ol type="A">
+  <li>Frist</li>
+  <li>Second</li>
+  <li>Third</li>
+</ol>
+
+<h4>Ordered List with uppercase letters</h4>
+<ol type="1">
+  <li>Frist</li>
+  <li>Second</li>
+  <li>Third</li>
+</ol>
+
+<h5>Ordered List with lowercase letters</h5>
+<ol type="a">
+  <li>Frist</li>
+  <li>Second</li>
+  <li>Third</li>
+</ol>
+
+<h6>Ordered List with Roman Numerals</h6>
+<ol type="I">
+  <li>Frist</li>
+  <li>Second</li>
+  <li>Third</li>
+</ol>
+</body>
+</html>
 
