--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -4,7 +4,7 @@
 
 <p>Lists are also important elements and are also customizable</p>
 
-<h2>Unordered List with Circle Bullets</h2>
+<p>Unordered List with Circle Bullets</p>
 
 <ul style="list-style-type:circle">
   <li>Frist</li>
@@ -12,35 +12,35 @@
   <li>Third</li>
 </ul>  
 
-<h3>Unordered List with squares</h3>
+<p>Unordered List with squares</p>
 <ul style="list-style-type:square">
   <li>Frist</li>
   <li>Second</li>
   <li>Third</li>
 </ul>
 
-<h3>Ordered List with uppercase letters</h3>
+<p>Ordered List with uppercase letters</p>
 <ol type="A">
   <li>Frist</li>
   <li>Second</li>
   <li>Third</li>
 </ol>
 
-<h4>Ordered List with uppercase letters</h4>
+<p>Ordered List with uppercase letters</p>
 <ol type="1">
   <li>Frist</li>
   <li>Second</li>
   <li>Third</li>
 </ol>
 
-<h5>Ordered List with lowercase letters</h5>
+<p>Ordered List with lowercase letters</p>
 <ol type="a">
   <li>Frist</li>
   <li>Second</li>
   <li>Third</li>
 </ol>
 
-<h6>Ordered List with Roman Numerals</h6>
+<p>Ordered List with Roman Numerals</p>
 <ol type="I">
   <li>Frist</li>
   <li>Second</li>
