--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Blocks</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Blocks</h1>
+<p>A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can).</p>
 
+<img src="/images/blocksist.png">
+  
 </body>
 </html>
