--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -8,7 +8,7 @@
 <h1>Blocks</h1>
 <p>A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can).</p>
 
-<img src="/images/blocklist.png" alt="Blocks List">
+<img src="/images/blockslist.png" alt="Blocks List">
   
 </body>
 </html>
