--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Blocks</h1>
-<p>A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can).</p>
+<p>A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can). Below is a list of block commands.</p>
 
 <img src="/images/blockslist.png" alt="Blocks List">
   
