--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -9,6 +9,11 @@
 <p>A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can). Below is a list of block commands.</p>
 
 <img src="/images/blockslist.png" alt="Blocks List">
+ 
+  
+<p>An inline element does not start on a new line and only takes up as much width as necessary. Below is a list of inline commands.</p>
+
+<img src="/images/blockslist2.png" alt="Blocks List">
   
 </body>
 </html>
