--- a/exercises/images.html
+++ b/exercises/images.html
@@ -12,6 +12,8 @@
 <img src="/images/wave.jpg">
 <img src="/images/road.jpg">
 
+<a href="https://matteogristina.github.io/exercises/links.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/tables.html">Next Exercise</a>
 
 </body>
 </html>
