--- a/exercises/colors.html
+++ b/exercises/colors.html
@@ -10,8 +10,8 @@
 <h1 style="background-color:SlateBlue;">SlateBlue</h1>
 <h1 style="background-color:Violet;">Violet</h1>
 <h1 style="background-color:LightGray;">LightGray</h1>
- <a href="https://matteogristina.github.io/exercises/comments.html">Previous Exercise</a>
-<a href="https://matteogristina.github.io/exercises/index.html">Exercises Home Page</a>
+ <a href="https://matteogristina.github.io/exercises/comments.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/links.html">Next Excersise</a>
 <a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 
 </body>
