--- a/exercises/links.html
+++ b/exercises/links.html
@@ -34,5 +34,9 @@ text-decoration: underline;
 
 <img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="400" height="50"><br>
 
+  
+ <a href="https://matteogristina.github.io/exercises/colors.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/images.html">Next Excersise</a><br>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
