--- a/exercises/tables.html
+++ b/exercises/tables.html
@@ -31,5 +31,9 @@
   </tr>
 </table>
 
+
+ <a href="https://matteogristina.github.io/exercises/links.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/lists.html">Next Excersise</a><br>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
