--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -46,6 +46,12 @@
   <li>Second</li>
   <li>Third</li>
 </ol>
+  
+
+ <a href="https://matteogristina.github.io/exercises/tables.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/blocks.html">Next Excersise</a><br>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
+  
 </body>
 </html>
 
