--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -15,5 +15,10 @@
 
 <img src="/images/blockslist2.png" alt="Blocks List">
   
+
+ <a href="https://matteogristina.github.io/exercises/lists.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/index.html">Excersise Home Page</a><br>
+<a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
+ 
 </body>
 </html>
