--- a/exercises/images.html
+++ b/exercises/images.html
@@ -10,7 +10,7 @@
 
 <img src="https://assets.change.org/photos/6/yu/xm/phYUXmIiZEuPcns-1600x900-noPad.jpg?1490797613" alt=BarryBBenson width="400" height="50"><br>
 <img src="/images/wave.jpg">
-<img src="/images/road.jpg">
+<img src="/images/road.jpg"><br>
 
 <a href="https://matteogristina.github.io/exercises/links.html">Previous Exercise</a><br>
 <a href="https://matteogristina.github.io/exercises/tables.html">Next Exercise</a><br>
