--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -13,7 +13,7 @@
   
 <p>An inline element does not start on a new line and only takes up as much width as necessary. Below is a list of inline commands.</p>
 
-<img src="/images/blockslist2.png" alt="Blocks List">
+<img src="/images/blockslist2.png" alt="Blocks List"><br>
   
 
  <a href="https://matteogristina.github.io/exercises/lists.html">Previous Exercise</a><br>
