--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -7,8 +7,8 @@
 
 <h1>Paragraphs are controlled by the element "p" (in angle brackets of course)</h1>
 <p>This is a paragraph.</p><p>This is also a paragraph.</p><p>This is a paragraph too.</p><p>This is another paragraph.</p><p>This is a paragraph.</p>
-<a href="https://matteogristina.github.io/exercises/headings.html">Previous Exercise</a>
-<a href="https://matteogristina.github.io/exercises/style.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/headings.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/style.html">Next Exercise</a><br>
 <a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
