--- a/exercises/style.html
+++ b/exercises/style.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<title>Style<title>
 <p>Styles change the size, color and font of the text.</p>
 <p>I am normal</p>
 <p style="color:red;">RED TEXT</p>
 <p style="color:blue;">BLUE TEXT</p>
 <p style="font-size:36px;">LARGE TEXT</p>
-<a href="https://matteogristina.github.io/exercises/paragraphs.html">Previous Exercise</a>
-<a href="https://matteogristina.github.io/exercises/formatting.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/paragraphs.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/formatting.html">Next Exercise</a><br>
 <a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
