--- a/exercises/formatting.html
+++ b/exercises/formatting.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<title>Formatting<title>
 <p>Formatting text bold italics and can make text sub and superscript<br> <b> - Bold text
 <strong> - Important text
 <i> - Italic text
@@ -11,12 +12,11 @@
 <ins> - Inserted text
 <sub> - Subscript text
 <sup> - Superscript text
-<p>
 <p><b>This text is bold</b></p>
 <p><i>This text is italic</i></p>
 <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
-<a href="https://matteogristina.github.io/exercises/style.html">Previous Exercise</a>
-<a href="https://matteogristina.github.io/exercises/quotation.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/style.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/quotation.html">Next Exercise</a><br>
 <a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
