--- a/exercises/formatting.html
+++ b/exercises/formatting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>Formatting<title>
+<title>Formatting</title>
 <p>Formatting text bold italics and can make text sub and superscript<br> <b> - Bold text
 <strong> - Important text
 <i> - Italic text
