--- a/exercises/style.html
+++ b/exercises/style.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>Style<title>
+<title>Style</title>
 <p>Styles change the size, color and font of the text.</p>
 <p>I am normal</p>
 <p style="color:red;">RED TEXT</p>
