--- a/exercises/quotation.html
+++ b/exercises/quotation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <title>Quotation</title>
 <p>Browsers usually insert quotation marks around the q element.</p>
   
 <p>His goal is to: <q>Build a future where people live in peace with nature.</q></p>
@@ -12,8 +13,8 @@ Example.com<br>
 Box 564, Disneyland<br>
 USA
 </address>
-<a href="https://matteogristina.github.io/exercises/formatting.html">Previous Exercise</a>
-<a href="https://matteogristina.github.io/exercises/comments.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/formatting.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/comments.html">Next Exercise</a><br>
 <a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
