--- a/exercises/comments.html
+++ b/exercises/comments.html
@@ -7,8 +7,8 @@
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
-<a href="https://matteogristina.github.io/exercises/quoation.html">Previous Exercise</a>
-<a href="https://matteogristina.github.io/exercises/colors.html">Next Exercise</a>
+<a href="https://matteogristina.github.io/exercises/quoation.html">Previous Exercise</a><br>
+<a href="https://matteogristina.github.io/exercises/colors.html">Next Exercise</a><br>
 <a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 </body>
 </html>
