--- a/exercises/comments.html
+++ b/exercises/comments.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <title>Comments</title>
+<title>Comments</title>
 <p>To create a comment use this angle bracket (<), followed by an exclamation point, and 2 dashes. To finish the comment, use 2 dashes and this angle bracket(>)</p>
-<p>This is a paragraph. There are three comments below this text, but the do not show up on the website.</p>
-<img src="/images/comments.jpg" alt="Comments">
+<p>This is a paragraph. There are three comments below this text, but the do not show up on the website. Below is an example of the formation of a comment in HTML.</p>
+<img src="/images/comments.png" alt="Comments">
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
 <!-- Comments are not displayed in the browser -->
