--- a/exercises/colors.html
+++ b/exercises/colors.html
@@ -11,7 +11,7 @@
 <h1 style="background-color:Violet;">Violet</h1>
 <h1 style="background-color:LightGray;">LightGray</h1>
  <a href="https://matteogristina.github.io/exercises/comments.html">Previous Exercise</a><br>
-<a href="https://matteogristina.github.io/exercises/links.html">Next Excersise</a>
+<a href="https://matteogristina.github.io/exercises/links.html">Next Excersise</a><br>
 <a href="https://matteogristina.github.io/exercises/indextwo.html">Back To List</a><br>
 
 </body>
