--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!--Links-->
 	<a href="https://matteogristina.github.io/exercises/index.html">Exercises Home Page</a><br>
 		<a href="https://matteogristina.github.io/exercises/indextwo.html">List of Exercises</a><br>
+			<a href="https://matteogristina.github.io/css-exercises/index.html">CSS test</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
 
