--- a/css-exercises/selectors.html
+++ b/css-exercises/selectors.html
@@ -7,9 +7,9 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>HEADING Test</h1>
-    <p id=id1>TESTING paragraph</p>
-    <p id=id2>TESTING paragraph</p>
+    <h1>RED</h1>
+    <p id=id1>Making elements colorful is much easier with CSS</p>
+    <p id=id2>You can center paragraphs too!</p>
     
     
     <p class="purplev">TESTING paragraph</p>
