--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -10,6 +10,6 @@
     <h1>HEADING Test</h1>
     <p>TESTING paragraph</p>
     <a href="matteogristina.github.io/index.html">Selectors</a>
-    <a href="matteogristina.github.io/css-exercises/selectors.html">Selectors</a>
+    <a href="matteogristina.github.io/css-exercises/selectors.html">Back to Home Page</a>
   </body>
 </html>
