--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>HEADING Test</h1>
     <p>TESTING paragraph</p>
-    <a href="matteogristina.github.io/index.html">Selectors</a>
-    <a href="matteogristina.github.io/css-exercises/selectors.html">Back to Home Page</a>
+    <a href="matteogristina.github.io/index.html">Back to Home Page</a>
+    <a href="matteogristina.github.io/css-exercises/selectors.html">To Selectors</a>
   </body>
 </html>
