--- a/css-exercises/selectors.html
+++ b/css-exercises/selectors.html
@@ -19,7 +19,7 @@
   <h2>This heading and the paragrapg are grouped together</h2>
   <p>however, only the paragraph element is changed</p>
 </div>
-    <a href="matteogristina.github.io/index.html">Back To Home Page</a><br>
-    <a href="matteogristina.github.io/css-exercises/index.html">Back To Home Page</a>
+    <a href="https://matteogristina.github.io/index.html">Back To Home Page</a><br>
+    <a href="https://matteogristina.github.io/css-exercises/index.html">Back To CSS Home Page</a>
   </body>
 </html>
