--- a/css-exercises/fonttest.html
+++ b/css-exercises/fonttest.html
@@ -2,16 +2,10 @@
 <html>
 <head>
 <link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'>
-<style>
-body {
-    font-family: 'Source Sans Pro';font-size: 25px;
-}
-</style>
 </head>
-<body>
+<body style="font-family: 'Source Sans Pro';font-size: 25px;">
 
 <h1>Source Sans Pro</h1>
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
 <p>123456790</p>
 <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 <p>abcdefghijklmnopqrstuvwxyz</p>
