--- a/html-reference.html
+++ b/html-reference.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width">
     <title>HTML Reference</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 15px;
+}
+</style>
   </head>
   <body>
    
