--- a/css-exercises/selectorsandvisualrules2.html
+++ b/css-exercises/selectorsandvisualrules2.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<a href="https://matteogristina.github.io/index.html">Back To Home Page</a>
+<a href="https://matteogristina.github.io/">Back To Home Page</a>
   <div class="content">
     <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-4/htmlcss1-img_writer-avatar.jpg" class="writer-img">
     <h3 class="byline">Article By: Jane Dover</h3>
