--- a/css-exercises/selectorsandvisualrules.html
+++ b/css-exercises/selectorsandvisualrules.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <a href="http://https://matteogristina.github.io/">Back To Home Page</a><br>
+  <a href="https://matteogristina.github.io/index.html">Back To Home Page</a><br>
   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" />
   <h1 class="title cursive capitalize" >Top Vacation Spots</h1>
   <h5>By: Stacy Gray</h5>
