--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -11,5 +11,7 @@
     <p>TESTING paragraph</p>
     <a href="https://matteogristina.github.io/index.html">Back to Home Page</a><br>
     <a href="https://matteogristina.github.io/css-exercises/selectors.html">To Selectors</a>
+    <a href="https://matteogristina.github.io/css-exercises/selectorsandvisualrules.html">To Setup and Selectors</a>
+    <a href="https://matteogristina.github.io/css-exercises/selectorsandvisualrules2.html">To Visual Rules</a>
   </body>
 </html>
