--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -10,8 +10,8 @@
     <h1>HEADING Test</h1>
     <p>TESTING paragraph</p>
     <a href="https://matteogristina.github.io/index.html">Back to Home Page</a><br>
-    <a href="https://matteogristina.github.io/css-exercises/selectors.html">To Selectors</a>
-    <a href="https://matteogristina.github.io/css-exercises/selectorsandvisualrules.html">To Setup and Selectors</a>
-    <a href="https://matteogristina.github.io/css-exercises/selectorsandvisualrules2.html">To Visual Rules</a>
+    <a href="https://matteogristina.github.io/css-exercises/selectors.html">To Selectors</a><br>
+    <a href="https://matteogristina.github.io/css-exercises/selectorsandvisualrules.html">To Setup and Selectors</a><br>
+    <a href="https://matteogristina.github.io/css-exercises/selectorsandvisualrules2.html">To Visual Rules</a><br>
   </body>
 </html>
